# my-document-tools

./: LICENSE  README.md  autotest.toml  pyproject.toml
guides/: beartype_type_hinting_guide.md  numpy_docstring_guide.md
src/doctools/: __main__.py  cli.py  search_string.py
src/doctools/latex/: citations.py  labels.py  titles.py
src/doctools/python/: clean.py  dependency_graph.py  nb2llm.py  sweep.py
tests/: conftest.py  test_citations.py  test_labels.py  test_search.py  test_titles.py
